fix(api):oauth api & auth filter add demo & auth filter add role
